Resolve: update my profile function resolved.
duplication of roles ids has fixed.